test-package-compiler/tests/snapshots/compiler_tests__error_recovery_malformed_message_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (5):
  - Undefined variable: dict
  - Undefined variable: key
  - Undefined variable: array
  - Undefined variable: index
  - Undefined variable: object
