test-package-compiler/tests/snapshots/compiler_tests__error_recovery_unterminated_string_lexer.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("str1"), span: Span { start: 188, end: 192 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// Test error recovery: unterminated string"), Whitespace("\n"), LineComment("// Lexer should recover and continue"), Whitespace("\n\n"), LineComment("// Unterminated double quote string"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 193, end: 195 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("unterminated string\n\n// Code after error should still parse\nx := 42\n\n// Another unterminated string\nstr2 := "), span: Span { start: 196, end: 306 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("another"), span: Span { start: 307, end: 314 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("unclosed"), span: Span { start: 315, end: 323 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("y"), span: Span { start: 338, end: 339 }, leading_trivia: [Whitespace("\n\n"), LineComment("// More code"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 340, end: 342 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("x"), span: Span { start: 343, end: 344 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("+"), span: Span { start: 345, end: 346 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("1"), span: Span { start: 347, end: 348 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 349, end: 349 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
