test-package-compiler/tests/snapshots/compiler_tests__error_recovery_unterminated_string_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (1):
  - Undefined variable: x
